# IfoodTUI

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  ESTRUTURA_PROJETO.md  FORMATACAO.md  README.md  main  main.c
IfoodTUI - DevC/: Makefile.win  ifood.dev  ifood.layout  main.c
output/: main
src/: Makefile  ifood  main.c
src/includes/: screens.h  user.h  utils.h
src/screens/: cadastro.c  login.c  welcome.c
src/utils/: clear.c
